Iniciando con Mongo DB

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-# PORT=8080
+PORT = 8080
+MONGODB_CNN = mongodb+srv://Cafe_User:eYpKVbu0edBg7gOq@clustercafe.yn60po6.mongodb.net/cafeDB
+
+USER = Cafe_User
+PASSWORD = eYpKVbu0edBg7gOq
